# rust-buddy

./: .env  Cargo.toml
src/: main.rs
src/ais/: asst.rs  mod.rs  msg.rs
src/ais/asst/: mod.rs
