[package]
name = "rust-buddy"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
unused = "allow"

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# -- AI
async-openai = "0.29.3"
# - D/Serialize
toml = "0.9.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# -- Cli
dialoguer = "0.12.0"
console = "0.16.1"
textwrap = "0.16"
# -- Files
walkdir = "2"
globset = "0.4"
# -- Others
derive_more = {version = "1.0.0-beta", features = ["from", "display", "deref"] }

dotenvy = "0.15"